--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,43 @@
 /*  your css code here. If applicable */
+.hero{
+	display:flex;
+	width:750px;
+	height:250px;
+
+}
+.left{
+	width:70%;
+	height:100%;
+	background-color:gray
+}
+img{
+	width:100%;
+	height:100%;
+	object-fit:cover;
+}
+.right{
+	width:30%;
+	height:100%;
+
+}
+h1{
+	font-size:20px;
+	text-align:center;
+	padding-top:80px;
+	padding-inline:40px;
+}
+p{
+	padding-inline:10px;
+	text-align:center;
+	color:gray;
+	font-size:12px;
+}
+.btn{
+    text align:center;
+	border-radius:3px;
+	border:none;
+	background-color:orangered;
+	color:white;
+	padding:7px;
+	margin-inline:60px;
+}
